--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Developer Profile - Ransara Devnath</title>
+    <title>Ransara Devnath's World</title>
     <style>
         /* GitHub Dark Mode Theme */
         body {
@@ -13,71 +13,28 @@
             color: #C9D1D9;
             margin: 0;
             padding: 20px;
-}
-.container {
-            width: 80%;
-            margin: auto;
-            padding: 20px;
-            background: #161B22;
-            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-}
-.name {
-            font-size: 36px;
-            font-weight: bold;
-            text-transform: uppercase;
-            animation: rgbColor 2s infinite alternate;
-}
-        @keyframes rgbColor {
-            0% { color: #ff0000;}
-            25% { color: #00ff00;}
-            50% { color: #0000ff;}
-            75% { color: #ffff00;}
-            100% { color: #ff00ff;}
-}
-.contact {
-            margin-top: 10px;
-            font-size: 20px;
-            color: #58A6FF;
-}
-.footer {
-            margin-top: 20px;
-            font-size: 14px;
-            color: #8B949E;
-}
-.contact-section {
-            margin-top: 20px;
-            padding: 15px;
-            background: #21262D;
-            border-radius: 10px;
-}
-.contact-button {
-            display: inline-block;
-            padding: 10px 15px;
-            font-size: 18px;
-            color: #C9D1D9;
-            background-color: #238636;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: 0.3s;
-}
-.contact-button:hover {
-            background-color: #2EA043;
+            transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
 }
 
-        /* Welcome Message */
-.welcome-message {
+        /* Animated Header */
+.header {
             padding: 30px;
             background: linear-gradient(45deg, #238636, #58A6FF);
-            color: #fff;
+            color: white;
+            font-size: 24px;
+            font-weight: bold;
             border-radius: 10px;
-            box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.2);
-            text-align: center;
-            animation: fadeIn 1.5s ease-in-out;
+            animation: slideIn 1.5s ease-in-out;
 }
-        @keyframes fadeIn {
-            0% { opacity: 0; transform: translateY(-20px);}
+
+        @keyframes slideIn {
+            0% { opacity: 0; transform: translateY(-30px);}
             100% { opacity: 1; transform: translateY(0);}
+}
+
+        /* Developer Profile */
+.profile {
+            margin-top: 20px;
 }
 
         /* Loading Animation */
@@ -91,6 +48,7 @@
             justify-content: center;
             z-index: 1000;
 }
+
 .spinner {
             width: 50px;
             height: 50px;
@@ -99,6 +57,7 @@
             border-radius: 50%;
             animation: spin 1s linear infinite;
 }
+
         @keyframes spin {
             0% { transform: rotate(0deg);}
             100% { transform: rotate(360deg);}
@@ -108,11 +67,60 @@
 .page-transition {
             opacity: 0;
             transform: translateY(20px);
-            transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
 }
+
 .loaded.page-transition {
             opacity: 1;
             transform: translateY(0);
+}
+
+        /* Developer Image */
+.developer-image {
+            width: 150px;
+            height: auto;
+            border-radius: 50%;
+            box-shadow: 0px 0px 10px rgba(255,255,255,0.3);
+            margin-bottom: 15px;
+}
+
+        /* RGB Animated Name */
+.name {
+            font-size: 36px;
+            font-weight: bold;
+            text-transform: uppercase;
+            animation: rgbColor 2s infinite alternate;
+}
+
+        @keyframes rgbColor {
+            0% { color: #ff0000;}
+            25% { color: #00ff00;}
+            50% { color: #0000ff;}
+            75% { color: #ffff00;}
+            100% { color: #ff00ff;}
+}
+
+        /* Contact Section */
+.contact {
+            margin-top: 20px;
+}
+
+        /* Footer */
+.footer {
+            margin-top: 20px;
+            font-size: 12px;
+}
+
+        /* Image Gallery */
+.images {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+}
+
+.images img {
+            width: 100px;
+            height: 100px;
+            margin: 0 5px;
 }
     </style>
 </head>
@@ -123,52 +131,59 @@
         <div class="spinner"></div>
     </div>
 
-    <!-- Welcome Message -->
-    <div class="welcome-message">
-    <h1>✨ Welcome to Ransara Devnath's World! ✨</h1>
-        <p>🚀 Explore and connect with me for amazing projects, creative ideas, and tech innovations!</p>
-        <p>👨‍💻 Passionate about coding, creativity, and making a difference. Let's build something awesome together! 🤍</p>
+    <!-- Welcome Header -->
+    <div class="header">
+        <h1>✨ WELCOME TO RANSARA DEVNATH'S WORLD! ✨</h1>
+        <p>Explore and connect with me for amazing projects, creative ideas, and tech innovations. Let's build something awesome together! 🚀</p>
     </div>
 
-    <div class="container">
+    <!-- Developer Profile -->
+    <div class="profile">
+        <img src="https://raw.githubusercontent.com/ransara-devnath/MANU-MDV8/refs/heads/main/assets/e4173d05-5957-4d9a-b3f2-87b41ef4a495.jpeg"
+             alt="Developer Image" class="developer-image">
         <div class="name">Ransara Devnath</div>
-        <div class="contact">📞 Contact Developer: <strong>0726880784</strong></div>
+        <p>📞 0726880784</p>
     </div>
 
-    <!-- Contact Developer Section -->
-    <div class="contact-section">
-        <h2>📞 Contact Developer</h2>
-        <p>Click below to chat on WhatsApp Business or visit GitHub</p>
-
-        <!-- WhatsApp Business Button -->
-        <a href="https://wa.me/message/XQZHYHBQ3E47I1" class="contact-button">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_business_app_logo.png" width="30" alt="WhatsApp Business Logo">
-            Chat on WhatsApp Business
-        </a>
-
-        <!-- GitHub Button -->
-        <a href="https://github.com/ransara-devnath" class="contact-button" style="background-color: #333; margin-top: 10px;">
-            <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="30" alt="GitHub Logo">
-            Visit GitHub Profile
-        </a>
+    <!-- Contact Section -->
+    <div class="contact">
+        <h3>📞 Contact Developer</h3>
+        <p>
+            <a href="https://wa.me/message/XQZHYHBQ3E47I1">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" width="30" alt="WhatsApp Logo">
+                Chat on WhatsApp
+            </a>
+        </p>
+        <p>
+            <a href="https://github.com/ransara-devnath">
+                <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" width="30" alt="GitHub Logo">
+                Visit GitHub Profile
+            </a>
+        </p>
     </div>
 
-    <div class="footer">© 2025 Ransara Devnath | All Rights Reserved</div>
+    <!-- Footer -->
+    <div class="footer">
+        <p>© 2025 Ransara Devnath | All Rights Reserved</p>
+    </div>
 
-    <!-- API Integration Placeholder -->
+    <!-- Image Gallery -->
+    <div class="images">
+        <img src="image1.jpg" alt="Landscape 1">
+        <img src="image2.jpg" alt="Landscape 2">
+        <img src="image3.jpg" alt="Landscape 3">
+        <img src="image4.jpg" alt="Landscape 4">
+        <img src="image5.jpg" alt="Landscape 5">
+    </div>
+
+    <!-- JavaScript for Page Load Animation -->
     <script>
-        // Simulating API integration (Replace with actual API call)
-        async function fetchAPI() {
-            let response = await fetch('https://api.example.com/data'); // Replace with real API
-            let data = await response.json();
-            console.log("API Data:", data);
-}
         window.onload = function() {
             document.getElementById("loader").style.display = "none"; // Hide loader when page loads
             document.body.classList.add("loaded"); // Enable transition effect
-            fetchAPI(); // Fetch API data
 };
     </script>
 
 </body>
-      </html>
+</html>
+ 
