--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
         <p>Explore and connect with me for amazing projects, creative ideas, and tech innovations. Let's build something awesome together! 🚀</p>
     </div>
 
+    <!-- Buttons Section -->
+    <div class="buttons">
+        <a href="contact.html" class="contact-button">📩 Contact Us</a>
+        <a href="https://wa.me/message/XQZHYHBQ3E47I1" class="contact-button">💬 Chat on WhatsApp</a>
+        <a href="https://github.com/ransara-devnath" class="contact-button">🐙 Visit GitHub Profile</a>
+    </div>
+
     <script>
         window.onload = function() {
             document.body.classList.add("loaded"); // Enable smooth page transition
@@ -21,4 +28,5 @@
     </script>
 
 </body>
-</html>
+    </html>
+    
