--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
     <!-- Contact Section -->
     <div class="contact">
-        <img src="https://raw.githubusercontent.com/ransara-devnath/SU/refs/heads/main/.github/workflows/e4173d05-5957-4d9a-b3f2-87b41ef4a495.jpeg
+        <img src="https://raw.githubusercontent.com/ransara-devnath/SU/refs/heads/main/.github/workflows/e4173d05-5957-4d9a-b3f2-87b41ef4a495.jpeg"
              alt="Developer Image" class="developer-image">
         <h2>👨‍💻 Developer: Ransara Devnath</h2>
         <p>🌍 Country: Sri Lanka</p>
