--- a/page-content.html
+++ b/page-content.html
@@ -11,4 +11,5 @@
 <div id="contact" style="display: none;">
     <h2>📩 Contact Us</h2>
     <p>Feel free to reach out for collaborations or inquiries.</p>
-  </div>
+    <img src="https://raw.githubusercontent.com/ransara-devnath/SU/refs/heads/main/.github/workflows/e4173d05-5957-4d9a-b3f2-87b41ef4a495.jpeg" class="developer-image" alt="Developer">
+</div>
