--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
 </head>
 <body onload="loadSongs()">
 
-<!-- Loading Screen -->
-<div id="loading-screen">🚀 Loading Site...</div>
-
 <!-- Header with Logo -->
 <header>
-    <img src="https://raw.githubusercontent.com/ransara-devnath/Ransara-Dewnath-/refs/heads/main/IMG-20250606-WA0003.jpg"
+    <img src="https://raw.githubusercontent.com/ransara-devnath/Ransara-Dewnath-/refs/heads/main/NEW-LOGO.jpg"
          alt="Site Logo" id="site-logo">
 </header>
 
@@ -35,6 +32,13 @@
     💻 Developed with ❤️ by Ransara Devnath • 🇱🇰 Powered by *SonicCeylon* © 2025
 </div>
 
+<!-- WhatsApp Chat Button -->
+<div id="whatsapp-chat">
+    <a href="https://wa.me/message/XQZHYHBQ3E47I1" target="_blank">
+        <button>💬 Chat on WhatsApp</button>
+    </a>
+</div>
+
 <!-- Footer -->
 <footer>
     <a href="contact.html">📩 Contact Us</a>
@@ -42,4 +46,4 @@
 
 <script src="script.js"></script>
 </body>
-</html>
+    </html>
