--- a/index.html
+++ b/index.html
@@ -8,38 +8,23 @@
 </head>
 <body onload="loadSongs()">
 
-<!-- Header with Logo -->
 <header>
-    <img src="https://raw.githubusercontent.com/ransara-devnath/Ransara-Dewnath-/refs/heads/main/NEW-LOGO.jpg"
-         alt="Site Logo" id="site-logo">
+    <img src="https://raw.githubusercontent.com/ransara-devnath/Ransara-Dewnath-/refs/heads/main/IMG-20250606-WA0003.jpg" alt="Site Logo" id="site-logo">
 </header>
 
-<!-- Search Section -->
 <div id="search-section">
     <input type="text" id="searchInput" placeholder="Search for a song...">
     <button onclick="searchSongs()">🔍 Search</button>
 </div>
 
-<!-- Songs List -->
 <div id="song-list"></div>
-
-<!-- Advanced Player Section -->
 <div id="player"></div>
 
-<!-- Looping Text -->
 <div id="looping-text">
     🎧 Discover Music | 📀 Download Hits | 🎶 Feel the Rhythm | 🔥 Non-Stop Vibes
     💻 Developed with ❤️ by Ransara Devnath • 🇱🇰 Powered by *SonicCeylon* © 2025
 </div>
 
-<!-- WhatsApp Chat Button -->
-<div id="whatsapp-chat">
-    <a href="https://wa.me/message/XQZHYHBQ3E47I1" target="_blank">
-        <button>💬 Chat on WhatsApp</button>
-    </a>
-</div>
-
-<!-- Footer -->
 <footer>
     <a href="contact.html">📩 Contact Us</a>
 </footer>
@@ -47,3 +32,4 @@
 <script src="script.js"></script>
 </body>
     </html>
+    
