--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <!-- Search Section -->
 <div id="search-section">
     <input type="text" id="searchInput" placeholder="Search for a song...">
+    <br> <!-- Search button properly aligned -->
     <button onclick="searchSongs()">🔍 Search</button>
 </div>
 
@@ -26,11 +27,11 @@
 <!-- Advanced Player Section -->
 <div id="player"></div>
 
-<!-- Footer -->
-<footer>
-    <a href="contact.html">📩 Contact Us</a>
-</footer>
+<!-- Footer with Ticker Animation -->
+<div id="ticker-animation">
+    💻 Developed with ❤️ by Ransara Devnath © 2025
+</div>
 
 <script src="script.js"></script>
 </body>
-</html>
+        </html>
